@@ -2,6 +2,7 @@ Revision history for Config::Abstraction - Configuration Abstraction Layer
 
 0.05
 	Added tests for all()
+	Added the logger option to new()
 
 0.04	Mon Apr  7 21:06:26 EDT 2025
 	Better handling of config_file mode when an XML file is missing its header
